# magellan

./: .gitignore  CMakeLists.txt
bck/: packet_receiver.cpp  packet_receiver.hpp  receiver.cpp  receiver.hpp  sender.cpp  sender.hpp  server.cpp  server.hpp  server_session.cpp  server_session.hpp  session_pool.cpp  session_pool.hpp
cmake/modules/: FindAsio.cmake
examples/: echo_client.cpp  echo_server.cpp  send_container_client.cpp  send_container_server.cpp
include/: base_packet.hpp  base_packet.ipp  base_session.hpp  base_session.ipp  client.hpp  client.ipp  connection.hpp  connection.ipp  future_monad.hpp  future_monad.ipp  magellan.hpp  monad.hpp  monad.ipp  optional.hpp  packet.hpp  packet.ipp  server.hpp  server.ipp  session.hpp  session.ipp  stream_packet.hpp  stream_packet.ipp  types.hpp
sandbox/: .sconsign.dblite  SConstruct  run_client.cpp  run_server.cpp  stock.hpp
src/: base_session.cpp  client.cpp  connection.cpp  packet.cpp  server.cpp  session.cpp
